--- a/index.html
+++ b/index.html
@@ -29,20 +29,14 @@
 
                     </li>
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                      <a class="nav-link" href="#">Portfolio</a>
+                      <a class="nav-link" href="#">Information</a>
                     </li>
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                      <a class="nav-link" href="#">Agency</a>
+                      <a class="nav-link" href="#">Products</a>
                     </li>
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                      <a class="nav-link" href="#" role="button" aria-haspopup="true" aria-expanded="false">Services</a>
+                      <a class="nav-link" href="#" role="button" aria-haspopup="true" aria-expanded="false">Contact Us</a>
                      
-                    </li>
-                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                      <a class="nav-link" href="#">Journal</a>
-                    </li>
-                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                      <a class="nav-link" href="#">Contact</a>
                     </li>
                   </ul>
                 </div>
