--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="col-md-12">
               <nav class="navbar navbar-expand-md navbar-light">
               
-                <a class="navbar-brand" href="" target="_blank"><img src="images/Main Logo.png" class="img1" alt=""></a>  
+                <a class="navbar-brand" href="" target="_blank"><img src="images/bagel1-removebg-preview.png" class="img1" alt=""></a>  
                 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
